[package]
name = "muh_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8" }
cosmwasm-storage = "1.0"
cw-storage-plus = "0.10.3"  # Adjust the version based on compatibility with cosmwasm-std
cw2 = "0.10.3"  # Provides contract versioning helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
schemars = "0.8"

[dev-dependencies]
cw-multi-test = "0.13.4"
sylvia = { version = "0.7.0", features = ["mt"] }
cosmwasm-vm = "1.0"  # Adjust version as needed
 
